--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <title>Mike DmC</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Error 404 -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- font da google -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
